<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/course_notification_start"
        android:orderInCategory="100"
        android:title="@string/set_start_notification"
        app:showAsAction="never" />

    <item
        android:id="@+id/course_notification_end"
        android:orderInCategory="100"
        android:title="@string/set_end_notification"
        app:showAsAction="never" />

    <item
        android:id="@+id/mentorDetails"
        android:orderInCategory="100"
        android:title="@string/see_mentor_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/addNote"
        android:orderInCategory="100"
        android:title="@string/add_note"
        app:showAsAction="never" />

    <item
        android:id="@+id/courseNotesList"
        android:orderInCategory="100"
        android:title="@string/see_course_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/deleteCourse"
        android:orderInCategory="100"
        android:title="@string/delete_this_course"
        app:showAsAction="never" />

</menu>